# BackupTool

./: CHANGES.md  README.md  TEMPLATE_README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: build.yml  release.yml  test-build.yml  test.yml
scripts/: release.mjs  updatelog.mjs
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.postcss
src/components/: HelloWorld.vue  OpenDir.vue  TaskManager.vue
