[package]
productName = "Tauri Vue Template"
name = "tauri_vue_template"
version = "0.4.0"
description = "A Tauri App"
authors = ["yiranzai"]
license = "MIT"
repository = "https://github.com/yiranzai/tauri-test"
default-run = "tauri_vue_template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "test_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]
