[package]
name = "backup_tool"
version = "0.0.5"
description = "A Tauri App"
authors = ["yiranzai"]
license = "MIT"
repository = "https://github.com/yiranzai/BackupTool"
default-run = "backup_tool"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-http = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-os = "2.2.0"
showfile = "0.1.1"
tauri-plugin-fs = "2.2.0"
chrono = { version = "0.4.39", features = [] }
tauri-plugin-log = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-autostart = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-updater = "2.3.0"
tauri-plugin-opener = "2.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "dir"
crate-type = ["staticlib", "cdylib", "lib"]
